# command-mock

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.hitm/: .gitignore
scripts/: release.sh
src/command_mock/: player.py  recorder.py
tests/: conftest.py  generate_mocks.py  test_core.py
