[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orgecc-command-mock"
dynamic = ["version"]
authors = [{ name = "Hug SCM Team" }]
description = "High-fidelity command mocking framework"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "testing",
    "mocking",
    "subprocess",
    "cli",
    "shell",
    "command-line",
    "record-replay",
    "vcr",
    "snapshot-testing",
    "pytest",
    "git",
    "docker",
    "deterministic",
    "integration-testing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: Pytest",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/elifarley/command-mock"
Repository = "https://github.com/elifarley/command-mock"
Issues = "https://github.com/elifarley/command-mock/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "setuptools-scm>=8.0",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
